--- a/do_coronafacturas_theme/sources_tropical/src/sass/components/_sectionSabores.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/components/_sectionSabores.scss
@@ -857,6 +857,12 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    transform: translateY(-5px);
+                    box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.3);
+                }
             }
         }
     }
