--- a/do_coronafacturas_theme/sources_tropical/src/sass/components/_sectionSaboresV1.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/components/_sectionSaboresV1.scss
@@ -276,17 +276,17 @@
             left: -3%;
         }
     }
-    
+
     &__title {
         &-h1 {
             font-size: 3.4em;
-            
+
             @include mq(mobS) {
                 font-size: 2.3em;
             }
         }
     }
-    
+
     &__category {
         display: flex;
         align-items: center;
@@ -330,7 +330,7 @@
                     background-color: $orange2;
                 }
             }
-            
+
 
             &.red {
                 &.active, &:hover {
@@ -428,7 +428,7 @@
         position: relative;
         width: 100%;
     }
-    
+
     .saboresSwiper {
         margin: 75px auto;
         position: relative;
@@ -454,7 +454,7 @@
         &-content {
             width: 100%;
         }
-        
+
         &__slide {
             flex-shrink: 0;
             width: 100%;
@@ -517,7 +517,7 @@
                 }
             }
         }
-        
+
         .pin-spacer {
             inset: 0px 0px 0px 0px !important;
             width: 100%;
@@ -534,19 +534,19 @@
                     background-color: $orange2;
                 }
             }
-    
+
             &:nth-child(2) {
                 .image__fondo {
                     background-color: $red2;
                 }
             }
-    
+
             &:nth-child(3) {
                 .image__fondo {
                     background-color: $pink;
                 }
             }
-    
+
             &:nth-child(4) {
                 .image__fondo {
                     background-color: $green;
@@ -597,7 +597,7 @@
                 width: 100%;
                 padding: 10px 0;
             }
-            
+
             @include mq(380) {
                 padding: 35px 0;
                 margin-bottom: 20px;
@@ -747,7 +747,7 @@
                 font-size: 2em;
                 letter-spacing: 0.05em;
                 line-height: 48px;
-                
+
                 @include mq(mob) {
                     font-size: 1.7em;
                     line-height: 35px;
@@ -784,8 +784,8 @@
 
                     @include mq(mob) {
                         margin-bottom: 30px;
-                    }                
-                    
+                    }
+
                     @include mq(380) {
                         margin-bottom: 10px;
                     }
@@ -801,6 +801,12 @@
                 display: flex;
                 align-items: center;
                 justify-content: center;
+                transition: all 0.3s ease-in-out;
+
+                &:hover {
+                    transform: translateX(-5px);
+                    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+                }
             }
         }
     }
