--- a/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
+++ b/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
@@ -255,7 +255,7 @@
 	</div>
 
 
-	<div class="containerRequestDrink">
+	<div class="containerRequestDrink" id="compra">
 		<div class="containerRequestDrink__body">
 			<div class="containerRequestDrink__title">
 				<div class="containerRequestDrink__bg"></div>
