--- a/do_coronafacturas_theme/templates/nodes/node--home_tropical.html.twig
+++ b/do_coronafacturas_theme/templates/nodes/node--home_tropical.html.twig
@@ -43,3 +43,16 @@
 		</div>
 	</div>
 </div>
+
+{# Page view de Corona Tropical - Programmatic pixel #}
+<!-- BEGIN ControlTag for "DO_Corona Tropical_Global_Site Page_Krux Directo_Visitas" -->
+<script class="kxct" data-id="xfz4tdq36" data-timing="async" data-version="3.0" type="text/javascript">
+  window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
+  (function(){
+    var k=document.createElement('script');k.type='text/javascript';k.async=true;
+    k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/xfz4tdq36.js';
+    var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
+  }());
+</script>
+<!-- END ControlTag -->
+<script type="application/javascript">(function(w,d,t,r,u){w[u]=w[u]||[];w[u].push({'projectId':'10000','properties':{'pixelId':'10099745','he': '<email_address>'}});var s=d.createElement(t);s.src=r;s.async=true;s.onload=s.onreadystatechange=function(){var y,rs=this.readyState,c=w[u];if(rs&&rs!="complete"&&rs!="loaded"){return}try{y=YAHOO.ywa.I13N.fireBeacon;w[u]=[];w[u].push=function(p){y([p])};y(c)}catch(e){}};var scr=d.getElementsByTagName(t)[0],par=scr.parentNode;par.insertBefore(s,scr)})(window,document,"script","https://s.yimg.com/wi/ytc.js","dotq");</script>
