bouncer validations changed

--- a/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
+++ b/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
@@ -215,7 +215,7 @@
 
 	<div class="ritual" id="ritual">
 		<div class="introduction">
-			<div class="introduction__h2">{{ node.field_description.value | raw }}</div>
+			<p class="introduction__h2">{{ node.field_description.value | raw }}</p>
 			<div class="introduction__h1">{{ node.field_title_two.value | raw }}</div>
 		</div>
 
