styles validations form

--- a/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
@@ -1251,3 +1251,11 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 }
+
+
+.error-message {
+  color: #FF8595 !important;
+  font-size: 14px   !important;
+  font-family: $coronaHeadlineSB !important;
+  width: auto !important;
+}
