--- a/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
+++ b/do_coronafacturas_theme/templates/nodes/corona-tropical.html.twig
@@ -215,16 +215,16 @@
 
 	<div class="ritual" id="ritual">
 		<div class="introduction">
-			<div class="introduction__h2">{{ node.field_description.value | raw }}</div>
+			<p class="introduction__h2">{{ node.field_description.value | raw }}</p>
 			<div class="introduction__h1">{{ node.field_title_two.value | raw }}</div>
 		</div>
 
 		<div class="boxAnimation">
 			<div class="boxAnimation__img">
-				<img class="bottle" alt="Corona tropical" title="Corona tropical" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/lataRitual.png')}}">
-				<img class="liquido bebida3" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/liquido.png')}}" alt="">
-				<img class="liquido gota1" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/gota.png')}}" alt="">
-				<img class="liquido gota2" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/gota.png')}}" alt="">
+				<img class="bottle" alt="Corona tropical dominicana" title="Corona tropical dominicana" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/lataRitual.png')}}">
+				<img class="liquido bebida3" alt="Corona tropical dominicana" title="Corona tropical dominicana" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/liquido.png')}}" alt="">
+				<img class="liquido gota1" alt="Corona tropical dominicana" title="Corona tropical dominicana" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/gota.png')}}" alt="">
+				<img class="liquido gota2" alt="Corona tropical dominicana" title="Corona tropical dominicana" src="{{co_150_core_image_to_webp('/' ~ directory ~ '/sources_tropical/dist/assets/images/gota.png')}}" alt="">
 			</div>
 			<h2 class="introduction__h1--float">{{ node.field_title_two.value | raw }}</h2>
 			<div class="step-container">
