--- a/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
+++ b/do_coronafacturas_theme/sources_tropical/src/sass/pages/_tropical.scss
@@ -7,7 +7,7 @@
 
 .banner {
     width: 100%;
-    height: 93vh;
+    height: 93vh !important;
     color: $white;
     position: relative;
     overflow: hidden;
